One time API call for trailerand after that save instance state is used to populate values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="action_settings">Sort By</string>
     <string name="title_activity_movie_details">MovieDetails</string>
     <string name="action_sortby">Sort By</string>
+    <string name="title_activity_trailer">Trailer</string>
+
+    <string name="hello_world">Hello world!</string>
 
 </resources>
